# webbycli

./: .travis.yml  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  config.go  coverage.out  deps.bzl  go.mod  go.sum  main.go  service.go  service_test.go  sling.go
.circleci/: config.yml
